--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently  \"next dev\" \"json-server --watch db.json --port 3004\"",
     "build": "next build",
-    "start": "next start",
+    "start": "concurrently \"next start\" \"json-server --watch db.json --port 3004\"",
     "lint": "next lint"
   },
   "dependencies": {
